@@ -89,14 +89,14 @@
     <div class="row">
         <div class="col-md-6">
             <!-- picture -->
-            <a href="#" class="d-flex justify-content-center pt-md-5">
+            <a href="{% url 'singleproject' project.id %}" class="d-flex justify-content-center pt-md-5">
                 <img  src={{project.project_homepage_url}} alt="company-image" id="hover-section" class="w-50 mt-md-5" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
             </a>
         </div>
 
         <div class="col-md-6 p-5 my-5 text-left">
             <!-- details -->
-            <a href="#" style="text-decoration: none;">
+            <a href="{% url 'singleproject' project.id %}" style="text-decoration: none;">
                 <h3 class="khand-semibold text-dark" id="hover-section" >{{project.project_name}}</h3>
             </a>
             
@@ -139,7 +139,7 @@
             </div>
             <br><br>
             <div >
-                <a href="#" class="d-flex justify-content-center">
+                <a href="{% url 'singleproject' project.id %}" class="d-flex justify-content-center">
                     <button class="btn border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold" id="hover-section" style="background-color: rgba(46, 74, 220, 0.84);">View</button>
                 </a>
             </div>
@@ -154,7 +154,7 @@
      <div class="row">
         <div class="col-md-6 p-5 my-5 text-left">
             <!-- details -->
-            <a href="#" style="text-decoration: none;">
+            <a href="{% url 'singleproject' project.id %}" style="text-decoration: none;">
                 <h3 class="khand-semibold text-dark" id="hover-section" >{{project.project_name}}</h3>
             </a>
             <br>
@@ -198,7 +198,7 @@
             </div>
             <br><br>
             <div >
-                <a href="#" class="d-flex justify-content-center">
+                <a href="{% url 'singleproject' project.id %}" class="d-flex justify-content-center">
                     <button class="btn border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold" id="hover-section" style="background-color: rgba(46, 74, 220, 0.84);">View</button>
                 </a>
             </div>
@@ -206,7 +206,7 @@
 
         <div class="col-md-6">
             <!-- picture -->
-            <a href="#" class="d-flex justify-content-center pt-md-5">
+            <a href="{% url 'singleproject' project.id %}" class="d-flex justify-content-center pt-md-5">
                 <img  src={{project.project_homepage_url}} alt="company-image" id="hover-section" class="w-50 mt-md-5" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
             </a>
         </div>
