@@ -1,0 +1,131 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- custom css connect -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+
+    <!-- Bootstrap Connect -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=New+Amsterdam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Jersey+10&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Jersey+10&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <title>yd - portfolio</title>
+</head>
+<body style="background-image: linear-gradient(#4b6cc11a, #fff 100vh);">
+
+<!-- Navigation -->
+<nav class="navbar navbar-light px-5" >
+    <a class="navbar-brand " href="{% url 'About' %}">
+        <img src="https://portfolio--bucket.s3.eu-north-1.amazonaws.com/My+Logo.svg" alt="My Logo" width="75px">
+    </a>
+
+    <div class="jsutify-content-end mx-5">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="{% url 'project' %}" class="nav-link">
+                    <i class="bi bi-arrow-left-circle-fill font-weight-bold" style="font-size: 45px;"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- End of Navigation -->
+
+<!-- Heading Project Title -->
+<div class="container text-center">
+    <br><br><br><br>
+    <h1 class=" khand-semibold" style="font-size: 89px;">{{project.project_name}}</h1>
+
+    <h1 class="khand-medium text-info" style="font-size: x-large;"><i class="bi bi-arrows" style="font-size: x-large;"></i>{{project.project_type}}<i class="bi bi-arrows" style="font-size: x-large;"></i></h1>
+    <br>
+</div>
+<!-- End of Heading -->
+
+<!-- Areas of work  -->
+<div class="container w-25">
+    <div class="row">
+        {% if project.area1 %}
+        <div class="col-md-6 khand-medium text-secondary text-center" style="font-size: large;">
+            <p><i class="bi bi-caret-right text-info" style="font-size: x-large;"></i> {{project.area1}}</p>
+        </div>
+        {% endif %}
+        {% if project.area2 %}
+        <div class="col-md-6 khand-medium text-secondary text-center" style="font-size: large;">
+            <p><i class="bi bi-caret-right text-info" style="font-size: x-large;"></i> {{project.area2}}</p>
+        </div>
+        {% endif %}
+        {% if project.area3 %}
+        <div class="col-md-6 khand-medium text-secondary text-center" style="font-size: large;">
+            <p><i class="bi bi-caret-right text-info" style="font-size: x-large;"></i> {{project.area3}}</p>
+        </div>
+        {% endif %}
+        {% if project.area4 %}
+        <div class="col-md-6 khand-medium text-secondary text-center" style="font-size: large;">
+            <p><i class="bi bi-caret-right text-info" style="font-size: x-large;"></i> {{project.area4}}</p>
+        </div>
+        {% endif %}
+    </div>
+</div>
+<br>
+<!-- End of areas of work -->
+
+<!-- homescreen image -->
+
+<div class="container-fluid d-flex justify-content-center">
+    <img src={{project.project_homepage_url}} alt="homescreen image" class="w-50" style="box-shadow: 0 0 10px black; border-radius: 10px;">
+</div>
+<br><br><br><br>
+<!-- homescreen image end -->
+
+<!-- Description section -->
+<div class="container text-justify p-5">
+
+    <h1 class="khand-medium" style="text-decoration: underline; text-decoration-color:#0dcaf0;">Description</h1>
+    <br>
+    <p class="khand-regular">{{project.long_description}}</p>
+
+    <br><br><br><br>
+
+
+    <h1 class="khand-medium" style="text-decoration: underline; text-decoration-color:#0dcaf0;">Technologies Used</h1>
+    <br>
+    <div class="row khand-regular ml-1">
+        {% for tech in tech_list %}
+        <p class="col-sm-3 mr-2 mb-3 p-2 rounded-pill text-center bg-info text-white" >{{tech}}</p>
+        {% endfor %}
+    </div>
+
+</div>
+<br><br><br><br>
+<!-- End of description section -->
+
+<!-- Button section -->
+
+<div class="d-flex justify-content-center khand-medium text-dark">
+    <a href={{project.source_code_url}} class="btn btn-secondary btn-lg  mx-3 font-weight-bold" target="_blank">Source Code</a>
+    <a href={{project.project_url}} class="btn btn-success btn-lg mx-3  font-weight-bold" target="_blank">Visit Site</a>
+</div>
+
+
+<!-- End Button section -->
+ <br><br>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+</body>
+</html>
