@@ -5,4 +5,5 @@ from . import views
 
 urlpatterns = [
     path('', views.ProjectPage, name='project'),
+    path('<str:pk>/', views.SingleProjectPage, name='singleproject'),
 ]
